--- a/mtm-6201-portfolio/index.html
+++ b/mtm-6201-portfolio/index.html
@@ -14,19 +14,21 @@
                 <img src="images/main-logo.webp">
             </a>
         </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="projects.html">Projects</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="main-nav">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="projects.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <div class="search-bar">
             <input type="text" placeholder="Search..">
         </div>
