--- a/mtm-6201-portfolio/index.html
+++ b/mtm-6201-portfolio/index.html
@@ -37,23 +37,23 @@
     <main>
         <div class="main-image">
             <img src="">
-            <p>Lorem Ipsum</p>
+            <p>Welcome to my portfolio! Here you will find everything there is about me. Along with myself you can find all of my recent projects. If you wish to contact me, we have a page for that as well. Feel free to look around at your leisure.</p>
         </div>
         <div class="image-nav">
             <a href="about.html">
-                <img src="">
+                <img src="images/candidate-photo.jpg">
                 <h2>
                     <a href="about.html">About</a>
                 </h2>
             </a>
             <a href="projects.html">
-                <img src="">
+                <img src="images/silhouette.png">
                 <h2>
                     <a href="projects.html">Projects</a>
                 </h2>
             </a>
             <a href="contact.html">
-                <img src="">
+                <img src="images/bell-icon.png">
                 <h2>
                     <a href="contact.html">Contact</a>
                 </h2>
