--- a/mtm-6201-portfolio/projects.html
+++ b/mtm-6201-portfolio/projects.html
@@ -14,7 +14,7 @@
                 <img src="">
             </a>
         </div>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li>
                     <a href="about.html">About</a>
