--- a/mtm-6201-portfolio/about.html
+++ b/mtm-6201-portfolio/about.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="">
+                <img src="images/main-logo.webp" class="img-fluid" alt="website logo">
             </a>
         </div>
         <nav class="main-nav">
-            <ul>
-                <li>
+            <ul class="row">
+                <li class="col">
                     <a href="about.html">About</a>
                 </li>
-                <li>
+                <li class="col">
                     <a href="projects.html">Projects</a>
                 </li>
-                <li>
+                <li class="col">
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -34,19 +35,19 @@
 
     <main>
         <div class="paragraph-1">
-            <img src="">
+            <img src="images/candidate-photo.jpg" class="img-fluid" alt="photo of me">
             <p>
-
+                Hi, my name is Adam and let me tell you a bit about myself before we dive deeper into some details. First and foremost, I am an ameteur interactive media designer, but I took this program as a step forward into a potential career. So far I have enjoyed most of my classes, some being a cakewalk while others were brutally hard. In the end I have constructed a multitude of finished projects that I hold close to myself; most of them being from Graphic Design because I enjoy creating visuals. Coding has never been my strongsuit, but I press forward and create what I can.
             </p>
         </div>
         <div class="paragraph-2-3">
             <img src="">
             <p>
-
+                As of writing this I am going into my 2nd year of Interactive Media Design with the addition of Co-op for a more practical experience in the workforce. My thoughts right now? I am a little nervous, but that's normal for most people considering college is a big step into choosing a path you want to take because of all the different paths that are laid bare. I've always been connected to technology, even when I was young, but that was all entertainment, not necessarily going into the technical part of technology, but I seemed to have grown some skill during this program. Did I have fun? Most of the time, but not all the time; probably because when I can't figure something out it's just a matter of what can I do to get stuff completed, and that usually ends up being half-baked projects.
             </p>
             <img src="">
             <p>
-
+                But what am I really interested in? I've always had a knack for entertainment, but not the entertainment that was explained before, no. I am talking about entertaining; being the main character and giving people something to watch. When I was younger, I would watch tons of videos to pass by the time, but it would keep me entertained. Years later I would then go and watch streams on Twitch; that's where my interest began. I have always wanted to try streaming and be the entertainer for a bunch of strangers on the internet. I don't mean to gloat, but I'd say my personality is pretty magnetic and unique. I honestly think I would make a good entertainer, and to top that off, I am pretty good at a handful of games.
             </p>
         </div>
     </main>
