--- a/mtm-6201-portfolio/index.html
+++ b/mtm-6201-portfolio/index.html
@@ -6,24 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="images/main-logo.webp">
+                <img src="images/main-logo.webp" class="img-fluid" alt="website logo">
             </a>
         </div>
         <div class="main-nav">
             <nav>
-                <ul>
-                    <li>
+                <ul class="row">
+                    <li class="col">
                         <a href="about.html">About</a>
                     </li>
-                    <li>
+                    <li class="col">
                         <a href="projects.html">Projects</a>
                     </li>
-                    <li>
+                    <li class="col">
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -41,19 +42,19 @@
         </div>
         <div class="image-nav">
             <a href="about.html">
-                <img src="images/candidate-photo.jpg">
+                <img src="images/candidate-photo.jpg" class="img-fluid" alt="about">
                 <h2>
                     <a href="about.html">About</a>
                 </h2>
             </a>
             <a href="projects.html">
-                <img src="images/silhouette.png">
+                <img src="images/silhouette.png" class="img-fluid" alt="projects">
                 <h2>
                     <a href="projects.html">Projects</a>
                 </h2>
             </a>
             <a href="contact.html">
-                <img src="images/bell-icon.png">
+                <img src="images/bell-icon.png" class="img-fluid" alt="contact">
                 <h2>
                     <a href="contact.html">Contact</a>
                 </h2>
