--- a/mtm-6201-portfolio/projects.html
+++ b/mtm-6201-portfolio/projects.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="">
+                <img src="images/main-logo.webp" class="img-fluid" alt="website logo">
             </a>
         </div>
         <nav class="main-nav">
-            <ul>
-                <li>
+            <ul class="row">
+                <li class="col">
                     <a href="about.html">About</a>
                 </li>
-                <li>
+                <li class="col">
                     <a href="projects.html">Projects</a>
                 </li>
-                <li>
+                <li class="col">
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
