Adjusts code in html and css files, more images

--- a/mtm-6201-portfolio/about.html
+++ b/mtm-6201-portfolio/about.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="images/main-logo.webp" class="img-fluid" alt="website logo">
+                <img src="images/main-logo.png" class="img-fluid" alt="website logo">
             </a>
         </div>
         <nav class="main-nav">
@@ -33,7 +33,7 @@
         </div>
     </header> <!-- end of header -->
 
-    <main>
+    <main class="about-page">
         <div class="paragraph-1">
             <img src="images/candidate-photo.jpg" class="img-fluid" alt="photo of me">
             <p>
