--- a/mtm-6201-portfolio/index.html
+++ b/mtm-6201-portfolio/index.html
@@ -12,7 +12,9 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="images/main-logo.webp" class="img-fluid" alt="website logo">
+                <div class="logo-image">
+                    <img src="images/main-logo.png" class="img-fluid" alt="website logo">
+                </div>
             </a>
         </div>
         <div class="main-nav">
@@ -37,24 +39,30 @@
 
     <main>
         <div class="main-image">
-            <img src="">
+            <img src="images/i-love-editing.png" class="img-fluid" alt="funny photo of myself">
             <p>Welcome to my portfolio! Here you will find everything there is about me. Along with myself you can find all of my recent projects. If you wish to contact me, we have a page for that as well. Feel free to look around at your leisure.</p>
         </div>
         <div class="image-nav">
             <a href="about.html">
-                <img src="images/candidate-photo.jpg" class="img-fluid" alt="about">
+                <div class="about-image">
+                    <img src="images/candidate-photo.jpg" class="img-fluid" alt="about">
+                </div>
                 <h2>
                     <a href="about.html">About</a>
                 </h2>
             </a>
             <a href="projects.html">
-                <img src="images/silhouette.png" class="img-fluid" alt="projects">
+                <div class="projects-image">
+                    <img src="images/silhouette.png" class="img-fluid" alt="projects">
+                </div>
                 <h2>
                     <a href="projects.html">Projects</a>
                 </h2>
             </a>
             <a href="contact.html">
-                <img src="images/bell-icon.png" class="img-fluid" alt="contact">
+                <div class="contact-image">
+                    <img src="images/bell-icon.png" class="img-fluid" alt="contact">
+                </div>
                 <h2>
                     <a href="contact.html">Contact</a>
                 </h2>
@@ -82,9 +90,9 @@
             </nav>
         </div>
         <div class="socials">
-            <img src="">
-            <img src="">
-            <img src="">
+            <img src="images/facebook-icon.png" alt="facebook">
+            <img src="images/twitter-icon.png" alt="twitter">
+            <img src="images/instagram-icon.png" alt="instagram">
         </div>
         <div class="copyright">
             <p>&copy; Copyright 2022</p>
