--- a/mtm-6201-portfolio/projects.html
+++ b/mtm-6201-portfolio/projects.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="images/main-logo.webp" class="img-fluid" alt="website logo">
+                <img src="images/main-logo.png" class="img-fluid" alt="website logo">
             </a>
         </div>
         <nav class="main-nav">
