--- a/mtm-6201-portfolio/about.html
+++ b/mtm-6201-portfolio/about.html
@@ -72,9 +72,9 @@
             </nav>
         </div>
         <div class="socials">
-            <img src="">
-            <img src="">
-            <img src="">
+            <img src="images/facebook-icon.png" alt="facebook">
+            <img src="images/twitter-icon.png" alt="twitter">
+            <img src="images/instagram-icon.png" alt="instagram">
         </div>
         <div class="copyright">
             <p>&copy; Copyright 2022</p>
